--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_jbcz"
+    android:background="@color/app_theme"
     tools:context="com.example.android.base.MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="12dp"
-        android:text="我是标题栏"
-        android:textColor="#333333"
-        android:textSize="16dp"
+    <FrameLayout
+        android:id="@+id/titleLayout"
+        android:layout_width="0dp"
+        android:background="@color/purple_500"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </TextView>
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="12dp"
+            android:text="我是标题栏"
+            android:textColor="#333333"
+            android:textSize="16dp" />
+    </FrameLayout>
+
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
