--- a/libs/base-lib/src/main/res/layout/activity_base.xml
+++ b/libs/base-lib/src/main/res/layout/activity_base.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,50 +25,69 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvBaseTitleLeft"
-                android:layout_width="0dp"
-                android:layout_height="45dp"
-                android:drawablePadding="0dp"
-                android:gravity="center"
-                android:onClick="onBaseActivityClick"
-                android:paddingStart="10dp"
-                android:paddingEnd="12dp"
-                android:textColor="@color/gray_333"
-                android:textSize="15sp"
-                app:drawableStartCompat="@mipmap/ic_arrows_right_black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvBaseTitleRight"
-                android:layout_width="0dp"
-                android:layout_height="45dp"
-                android:drawablePadding="0dp"
-                android:gravity="center"
-                android:onClick="onBaseActivityClick"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:textColor="@color/gray_333"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvBaseTitle"
+                android:id="@+id/baseTitleView"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:lines="1"
+                android:paddingStart="60dp"
+                android:paddingEnd="60dp"
+                android:text="@string/title"
                 android:textColor="@color/gray_333"
                 android:textSize="@dimen/base_title_size"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/baseTitleLeftImage"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:padding="13dp"
+                android:src="@mipmap/ic_arrows_left_black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/baseTitleLeftText"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:paddingStart="14dp"
+                android:paddingEnd="6dp"
+                android:gravity="center"
+                android:textColor="@color/gray_333"
+                android:textSize="@dimen/base_title_right_size"
+                app:layout_constraintStart_toEndOf="@+id/baseTitleLeftImage"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/goBack" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/baseTitleRightText"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:paddingStart="6dp"
+                android:paddingEnd="14dp"
+                android:textColor="@color/gray_333"
+                android:textSize="@dimen/base_title_right_size"
+                app:layout_constraintEnd_toStartOf="@+id/baseTitleRightImage"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/detail" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/baseTitleRightImage"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:padding="13dp"
+                android:src="@mipmap/ic_arrows_right_black"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
