--- a/libs/base-lib/src/main/res/values/dimens.xml
+++ b/libs/base-lib/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="base_title_size">18sp</dimen>
+    <dimen name="base_title_size">16sp</dimen>
+    <dimen name="base_title_right_size">15sp</dimen>
 
     <dimen name="base_padding_size">12dp</dimen>
 
