--- a/app/src/main/res/layout/activity_rounded.xml
+++ b/app/src/main/res/layout/activity_rounded.xml
@@ -7,26 +7,6 @@
     android:orientation="vertical">
 
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginVertical="5dp"
-        app:cardBackgroundColor="@color/purple_200"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="4dp"
-        app:contentPadding="2dp"
-        app:strokeColor="@color/purple_700"
-        app:strokeWidth="2dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/app_theme"
-            android:gravity="center"
-            android:text="圆角测试" />
-
-    </androidx.cardview.widget.CardView>
-
     <com.google.android.material.card.MaterialCardView
         android:layout_width="200dp"
         android:layout_height="50dp"
@@ -73,5 +53,30 @@
         app:bl_gradient_startColor="@color/red"
         app:bl_stroke_color="@color/app_theme"
         app:bl_stroke_width="2dp" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView1"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:gravity="center"
+        android:text="圆角测试" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView2"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:gravity="center"
+        android:text="圆角测试" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView3"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:gravity="center"
+        android:text="圆角测试" />
 
 </LinearLayout>
